[package]
name = "httpd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
command-fds = { version = "0.3.0", features = ["tokio"] }
nix = { version = "0.27.1", features = ["user", "process", "signal"] }
pledge = "0.4.2"
rustls = "0.22.2"
rustls-pemfile = "2.0.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_cbor = "0.11.2"
serde_derive = "1.0.195"
tokio = { version = "1.35.1", features = ["process", "rt", "rt-multi-thread", "macros", "fs", "io-util", "signal", "net", "io-std"] }
tokio-command-fds = "0.2.1"
tokio-rustls = "0.25.0"
tokio-seqpacket = "0.7.1"
unveil = "0.3.2"
