[package]
name = "httpd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
nix = { version = "0.27.1", features = ["fs", "user", "process", "signal"] }
num_enum = "0.7.2"
pledge = "0.4.2"
rustls = "0.22.2"
rustls-pemfile = "2.0.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_cbor = "0.11.2"
serde_derive = "1.0.195"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["process", "rt", "rt-multi-thread", "macros", "fs", "io-util", "signal", "net", "io-std", "time"] }
tokio-command-fds = "0.2.1"
tokio-rustls = "0.25.0"
tokio-seqpacket = "0.7.1"
tokio-util = "0.7.10"
unveil = "0.3.2"
